# pcn

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
.changeset/: README.md
.github/workflows/: ci.yml
.turbo/cache/: 91aea02f5030fd53-meta.json  91aea02f5030fd53.tar.zst  d093c493a0d8704c-meta.json  d093c493a0d8704c.tar.zst
docs/: README.md  SUMMARY.md  bibliography.bib  integration.md  publishing.md
docs/reference/: policies.md
examples/chat-app/: CHANGELOG.md  README.md  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
examples/chat-app/src/: App.tsx  MessageWithClaims.tsx  index.css
python/pcn-core/: README.md  pyproject.toml
python/pcn-core/src/pcn_core/: __init__.py  compare.py  types.py
python/pcn-core/tests/: test_spec_fixtures.py
python/pcn-fixtures/: README.md  pyproject.toml
python/pcn-fixtures/src/pcn_fixtures/: __init__.py
specs/: README.md  policy.schema.json
specs/fixtures/: cases.json
