[project]
name = "pcn-core"
version = "0.1.0"
description = "Proof-Carrying Numbers (PCN): core engine for verifying numeric claims."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "PCN Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
